--- a/sub-monitor-center/src/main/resources/application.yml
+++ b/sub-monitor-center/src/main/resources/application.yml
@@ -5,5 +5,38 @@ spring:
     name: sub-monitor-center
 eureka:
   client:
+    #eureka-服务端地址，多节点,隔开
     service-url:
-      defaultZone: http://127.0.0.1:30080/eureka
+      defaultZone: http://admin:123456@127.0.0.1:30080/eureka
+    # 是否注册到 Eureka
+    register-with-eureka: true
+    # 是否拉取服务列表
+    fetch-registry: true
+    # 拉取服务列表间隔
+    registry-fetch-interval-seconds: 30
+  instance:
+    # 优先使用 IP 注册
+    prefer-ip-address: true
+    # 自定义实例 ID 显示
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}
+    # 心跳间隔
+    lease-renewal-interval-in-seconds: 30
+    # 续约到期时间
+    lease-expiration-duration-in-seconds: 90
+    # 健康检查路径
+    health-check-url-path: /actuator/health
+    # 状态页路径
+    status-page-url-path: /actuator/info
+    # 主页路径
+    home-page-url-path: /
+    # 添加元数据
+    metadata-map:
+      version: 1.0.0
+      environment: dev
+
+# 启用 Actuator 健康检查端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
