--- a/sub-service-center/pom.xml
+++ b/sub-service-center/pom.xml
@@ -30,6 +30,17 @@
             <artifactId>forest-spring-boot-starter</artifactId>
             <version>1.5.20</version>
         </dependency>
+
+        <!--common工程-->
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>sub-datacenter-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
